グラフ修正

--- a/Thesis.tex
+++ b/Thesis.tex
@@ -72,22 +72,18 @@ T5-25 \:中村　優\\
 % 本文開始
 % ---------
 \section{はじめに}
-\begin{samepage}
-先行研究[1]にて自由空間での自律分散ドローンによる3次元メッシュネットワーク環境においてのオーバリーチの問題を解決するために、送信信号の届く中継局まで一度に中継する CTR（Cooperation Through Relay）方式が提案されている。本稿では、干渉/誤りが起きたときのCTR方式のスループット特性を従来方式と比較し評価する。
-\end{samepage}
+先行研究[1]にて自由空間での自律分散ドローンによる3次元メッシュネットワーク環境においてのオーバリーチの問題を解決するために、送信信号の届く中継局まで一度に中継するCTR（Cooperation Through Relay）方式が提案されている。本稿では、干渉や誤りが起きたときのCTR方式のスループット特性を従来方式と比較し評価する。
+
+\section{従来方式の概要}
+まず、従来方式について説明する。図1に従来方式の概要を示す。従来の中継伝送では1ホップずつ中継するが、自由空間で伝搬損失が少ないため送信信号が中継先のドローン(図1\#3)より遠くのドローン(図1\#4)に到達し干渉が起こる。そのため、従来の方式ではオーバリーチ干渉によってチャネル利用効率が低下する。また従来の方式で干渉が起き再送を行うとき、伝送レートを下げることでSNR (Signal to Noise Ratio)が低くても受信できるようにしているが、伝送レート低下に伴う送信時間や再送によるオーバヘッドが増加してしまう。
 
 \section{CTR方式の概要}
-\begin{samepage}
-図1にCTR方式の概要を示す。通常の中継伝送では1ホップずつ中継するため、オーバリーチ干渉によってチャネル利用効率が低下する。
+図2に示すCTR方式は、送信信号の届く範囲の最終中継局（図1\#4）まで一度に信号を送信し、通信経路の中継局（図1\#3）もパケットを受信する。最終中継局がパケットの受信に失敗した場合は、直線経路の中継局\#3が\#4の代わりに次の中継局にパケットを中継する。そのため、オーバリーチ干渉の影響を減らすとともに中継ホップ数も減るので中継オーバヘッドも削減することができる。
 
-CTR方式では、送信信号の届く範囲の最終中継局（図1の\#4）まで一度に信号を送信し、通信経路の中継局（図1の\#3）もパケットを受信する。最終中継局がパケットの受信に失敗した場合は、直線経路の中継局\#3が\#4の代わりに次の中継局にパケットを中継する。
+\section{比較結果}
+本稿では、CTR方式で誤りが生じたときの効果について評価する。中継の伝送距離は1000mとし、50m間隔で直線状に20台配置した。アンテナの送受信利得は0dBi、送信電力は10dBmとした。周波数は2.4GHz、伝送レートはIEEE 802.11gの18Mbpsとし、伝搬損失は自由空間伝搬損失とした。従来の方式では再送時の伝送レートを一つ下の12Mbpsとする。中継局を3台スルーした場合におけるスループット特性を評価した。このときパケット誤り率を3％と20％とし、1000回試行したときの従来の方式とCTR方式の平均のスループット特性を比較した。
 
-図2にCTR方式のアクセス制御を示す。送信局はACK（Acknowledgement）の返信時間が記述されたパケットを送信する。パケットを受信した中継局は送信局に対してACK返信時間にACKを返信する。このとき、ACKを受信した経路上の中継局はACKの送信待ちをキャンセルする。
-
-最終中継局（図2の\#4）がパケットを受信できない場合は\#3が送信局の\#1にACKを送信し、\#4の代わりに中継する。これにより、オーバリーチ干渉の影響を減らすとともに中継ホップ数も減るためオーバヘッドを削減できる。
-\end{samepage}
-
-
+図3に誤り率が3％、図4に誤り率が20％のCTR方式と従来の方式の平均スループット特性を示す。この結果から、いずれの条件でもCTR方式が従来の方式よりスループットが下回ることがないことがわかる。また、誤り率が3％と20％を比べると20％の方が従来の方式よりスループットが高い。このことから、誤る確率が高いほどCTR方式が従来の方式より高いスループットを得られるという結果が得られた。
 
 % ---------
 % 文献リスト
