グラフ修正

--- a/Thesis.tex
+++ b/Thesis.tex
@@ -51,8 +51,8 @@ right=20mm
 }
 \makeatother
 
-\title{\huge 直線中継伝送におけるアクセス制御方式の干渉時の評価\\
-\Large Evaluation of access control schemes in linear relay transmission during interference.
+\title{\huge ドローンにおける直線中継伝送のアクセス制御方式の検討評価\\
+\Large Study and Evaluation of Access Control Schemes for Rectilinear Relay transmission in drones
 }
 
 \author{
@@ -72,19 +72,50 @@ T5-25 \:中村　優\\
 % 本文開始
 % ---------
 \section{はじめに}
-先行研究[1]にて自由空間での自律分散ドローンによる3次元メッシュネットワーク環境においてのオーバリーチの問題を解決するために、送信信号の届く中継局まで一度に中継するCTR（Cooperation Through Relay）方式が提案されている。本稿では、干渉や誤りが起きたときのCTR方式のスループット特性を従来方式と比較し評価する。
-
+ドローンを用いたネットワークにおいて，オーバーリーチの問題を解決するために送信信号の届く中継局まで一度に中継する CTR（Cooperation Through Relay）方式[1]が提案されている. 本稿では,提案手法において干渉/誤りが生じた際のスループット特性を従来方式と比較し評価する.
 \section{従来方式の概要}
-まず、従来方式について説明する。図1に従来方式の概要を示す。従来の中継伝送では1ホップずつ中継するが、自由空間で伝搬損失が少ないため送信信号が中継先のドローン(図1\#3)より遠くのドローン(図1\#4)に到達し干渉が起こる。そのため、従来の方式ではオーバリーチ干渉によってチャネル利用効率が低下する。また従来の方式で干渉が起き再送を行うとき、伝送レートを下げることでSNR (Signal to Noise Ratio)が低くても受信できるようにしているが、伝送レート低下に伴う送信時間や再送によるオーバヘッドが増加してしまう。
+図１に従来方式の概要を示す．従来の中継伝送では 1 ホップずつ中継するが,自由空間では，伝搬損失が少ないため送信信号が中継先のドローン（図1\#3）より遠くのドローン(図1\#4)に到達し干渉が生じる.そのため,従来方式は，オーバーリーチ干渉によってチャネル利用効率が低下する．また，従来方式で干渉が生じ，再送を行う際には，フォールバック制御により伝送レートを下げることでSNR(Signal to Noise Ratio)が低くてもパケットを受信できるようにしているが,伝送レートの低下に伴って送信時間や再送によるオーバヘッドが増加してしまう課題がある．
+
+
+\begin{figure}[htbp]
+  \centering
+  \includegraphics[width=\linewidth]{cenventional_topology.png} % 図のファイル名を指定
+  \caption{従来の方式の概要}
+  \label{fig:従来の方式のトポロジー} % 参照用ラベル
+\end{figure}
 
 \section{CTR方式の概要}
-図2に示すCTR方式は、送信信号の届く範囲の最終中継局（図1\#4）まで一度に信号を送信し、通信経路の中継局（図1\#3）もパケットを受信する。最終中継局がパケットの受信に失敗した場合は、直線経路の中継局\#3が\#4の代わりに次の中継局にパケットを中継する。そのため、オーバリーチ干渉の影響を減らすとともに中継ホップ数も減るので中継オーバヘッドも削減することができる。
-
+図2に示すCTR方式は,送信信号の届く範囲の最終中継局（図 1\#4）まで一度に信号を送信し，通信経路の中継局（図 1\#3）もパケットを受信する．最終中継局がパケットの受信に失敗した場合は，直線経路の中継局\#3が\#4 の代わりに次の中継局にパケットを中継する．
+\begin{figure}[htbp]
+  \centering
+  \includegraphics[width=\linewidth]{CTR_topology.png} % 図のファイル名を指定
+  \caption{CTR方式の概要}
+  \label{fig:CTR方式のトポロジー} % 参照用ラベル
+\end{figure}
+図3にCTR方式のアクセス制御を示す．送信局はACK（Acknowledgement）の返信時間が記述されたパケットを送信する．パケットを受信した中継局は送信局に対して ACK 返信時間にACKを返信する．このとき，ACKを受信した経路上の中継局はACKの送信待ちをキャンセルする．最終中継局（図2\#4）がパケット を受信できない場合は\#3が送信局の\#1に ACKを送信し，\#4の代わりに中継する．
+そのためオーバーリーチ干渉の影響を減らすとともに中継ホップ数も減るので中継オーバヘッドも削減することができる．
+\begin{figure}[htbp]
+  \centering
+  \includegraphics[width=\linewidth]{CTR_accsess.png} % 図のファイル名を指定
+  \caption{CTR方式のアクセス制御}
+  \label{fig:CTR方式のアクセス制御} % 参照用ラベル
+\end{figure}
 \section{比較結果}
-本稿では、CTR方式で誤りが生じたときの効果について評価する。中継の伝送距離は1000mとし、50m間隔で直線状に20台配置した。アンテナの送受信利得は0dBi、送信電力は10dBmとした。周波数は2.4GHz、伝送レートはIEEE 802.11gの18Mbpsとし、伝搬損失は自由空間伝搬損失とした。従来の方式では再送時の伝送レートを一つ下の12Mbpsとする。中継局を3台スルーした場合におけるスループット特性を評価した。このときパケット誤り率を3％と20％とし、1000回試行したときの従来の方式とCTR方式の平均のスループット特性を比較した。
+本稿では,CTR方式において誤りが生じる条件にて評価を行う．中継の総伝送距離は1000mとし，50m間隔で直線状に20台のドローンを配置した．アンテナの送受信利得は0dBi，送信電力は10dBmとした．周波数は 2.4GHz，伝送レートはIEEE 802.11gの18Mbpsとし,伝搬損失は自由空間伝搬損失とした.従来方式では再送時のフォールバック制御により伝送レートを一つ下の12Mｂｐｓとする.中継局を3台スルーした場合におけるスループット特性を評価した.このときパケット誤り率を3％と20％とし,1000回試行したときの従来の方式とCTR方式の平均のスループット特性を比較した.
+図4に誤り率3％, 図5に誤り率20％の場合のCTR方式と従来方式の平均スループット特性を示す．この結果からいずれの条件でもCTR方式が従来方式よりも高いスループットが得られることを確認した.また, 誤り率3％と20％を比較すると20％の方が従来方式よりスループットが高くなることから, 従来方式よりもＣＴＲ方式は誤り率が高い条件においても高速に中継伝送が可能なことを確認した．
 
-図3に誤り率が3％、図4に誤り率が20％のCTR方式と従来の方式の平均スループット特性を示す。この結果から、いずれの条件でもCTR方式が従来の方式よりスループットが下回ることがないことがわかる。また、誤り率が3％と20％を比べると20％の方が従来の方式よりスループットが高い。このことから、誤る確率が高いほどCTR方式が従来の方式より高いスループットを得られるという結果が得られた。
-
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=\linewidth]{throughput_probabilistic_retry_0.03.png} % 図のファイル名を指定
+  \caption{誤り率3\%の時のスループット}
+  \label{fig:Throughput_0.03} % 参照用ラベル
+\end{figure}
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=\linewidth]{throughput_probabilistic_retry_0.2.png} % 図のファイル名を指定
+  \caption{誤り率20\%の時のスループット}
+  \label{fig:Throughput_0.2} % 参照用ラベル
+\end{figure}
 % ---------
 % 文献リスト
 % ---------
