--- a/TB-10 中村.tex
+++ b/TB-10 中村.tex
@@ -108,8 +108,8 @@ T5-25 \:中村　優\\
 \section{CTR方式の評価}
 \subsection{誤りが無い条件でのCTR方式の評価}
 CTR方式の特徴である中継局をスルーすることによるスループットの向上を以下の条件で従来方式と比較する．
-中継の総伝送距離は1000mとし，50m間隔で直線状に20台のドローンを配置した．アンテナの送受信利得は0dBi，送信電力は10dBmとした．周波数は2.4GHz，伝送レートはIEEE 802.11aを参考にし，伝搬損失は自由空間伝搬損失とした．
-評価内容は従来の1ホップ中継(54Mbps) と中継局を2台スルー(24Mbps) した場合，および中継局を3台スルー(18Mbps) した場合におけるスループット特性を確認する．括弧内は使用可能な最も高い伝送レートである．これは受信電力よりIEEE 802.11aのMCS (Modulation and Coding Scheme) indexから選択する．
+中継の総伝送距離は1000mとし，50m間隔で直線状に20台のドローンを配置した．アンテナの送受信利得は0dBi，送信電力は10dBmとした．周波数は2.4GHz，伝送レートはIEEE 802.11gを参考にし，伝搬損失は自由空間伝搬損失とした．
+評価内容は従来の1ホップ中継(54Mbps) と中継局を2台スルー(24Mbps) した場合，および中継局を3台スルー(18Mbps) した場合におけるスループット特性を確認する．括弧内は使用可能な最も高い伝送レートである．これは受信電力よりIEEE 802.11gのMCS (Modulation and Coding Scheme) indexから選択する．
 \\　図4にCTR方式のスループット特性を示す．従来の1ホップ中継と比べてCTR方式で中継局を3台スルーした条件では約2倍のスループットが得られた．
 ドローンをスルーする場合は，通信距離が長くなり使用可能な伝送レートが低下するが，アクセス制御やプリアンブル等のオーバヘッドとのトレードオフになる．その結果，ネットワーク全体の通信効率において，中継局を3台スルーする条件が最も高くなることを確認した．
 \begin{figure}[H]
